--- a/index.html
+++ b/index.html
@@ -1,13 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/movie.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>react-api-fetch-movies-app</title>
+    <title>react-context-restaurant-app</title>
   </head>
   <body>
     <div id="root"></div>
+    <div id="overlays"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
